--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <title>はじめてのjQuery</title>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script>
+    $("#parent p").css("color", "red");
+  </script>
 </head>
 <body>
+  <p>てすと<</p>
 </body>
 </html>
