--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <title>はじめてのjQuery</title>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script>
-    $("#parent p").css("color", "red");
+    $("#aka p").css("color", "red");
   </script>
 </head>
 <body>
-  <p>てすと<</p>
+  <p id="aka">てすと</p>
 </body>
 </html>
