--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>はじめてのjQuery</title>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script>
-    $("p").css("color", "red");
+    $("#aka").css("color", "red");
   </script>
 </head>
 <body>
