--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <title>はじめてのjQuery</title>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-  <script>
-    $("p").css("color", "red");
+  <script type="text/javascript">
+    $(function(){
+      $("p").css("color", "red");
+    });
   </script>
 </head>
 <body>
