--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script type="text/javascript">
     $(function(){
       $("#toggle").on("click", function(){
-        $("#target").sildeToggle("slow");
+        $("#target").fadeToggle("slow");
       });
     });
   </script>
