--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
   <script type="text/javascript">
     $(function(){
+//      $("#toggle").on("click", function(){
+//        $("#target").fadeToggle("slow");
+//      });
+
       $("#toggle").on("click", function(){
-        $("#target").fadeToggle("slow");
+        $("#target").animate(marginLeft: "100px",);
       });
+
     });
+    
   </script>
 </head>
 <body>
