--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 //      });
 
       $("#toggle").on("click", function(){
-        $("#target").animate(marginLeft: "100px",);
+        $("#target").animate("marginLeft": "100px",);
       });
 
     });
