--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
   <script type="text/javascript">
     $(function(){
-//      $("#toggle").on("click", function(){
-//        $("#target").fadeToggle("slow");
-//      });
-
       $("#toggle").on("click", function(){
-        $("#target").animate({"marginLeft": "100px"});
+        $("#target").fadeToggle("slow");
       });
+
+// クリックしたときに左から右に動く
+//      $("#toggle").on("click", function(){
+//        $("#target").animate({"marginLeft": "100px"});
+//      });
 
     });
     
